// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mode transforms correctly using "mode-1" data 1`] = `
"module.exports = {
  mode: 'production'
};
"
`;

exports[`mode transforms correctly using "mode-1" data 2`] = `
"module.exports = {
  mode: modeVariable
};
"
`;

exports[`mode transforms correctly using "mode-2" data 1`] = `
"module.exports = {
	mode: none
}
"
`;

exports[`mode transforms correctly using "mode-2" data 2`] = `
"module.exports = {
	mode: 'production'
}
"
`;
